@@ -1,3 +1,9 @@
+2007-12-31  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-combo.c:
+
+	Move some static functions to the top of the file.
+
 2007-12-27  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
